# computer_graphicsWS1920

./: .gitignore  CMakeLists.txt  a2-1.cpp  main.cpp
EX01/cpp-practice-ws19-ex01-template/: .gitignore  CMakeLists.txt  README.md
EX01/cpp-practice-ws19-ex01-template/src/2.1 clock resolution/: CMakeLists.txt  clock-resolution.cpp
EX01/cpp-practice-ws19-ex01-template/src/2.2 microbenchmarking/: CMakeLists.txt  sqrt-pow.cpp
EX01/cpp-practice-ws19-ex01-template/src/2.3 clock latency/: CMakeLists.txt  clock-latency.cpp
EX01/cpp-practice-ws19-ex01-template/src/3.1 fixed-length sequences/: CMakeLists.txt  benchmark.cpp  sequences-fixed.cpp  sequences-fixed.hpp
EX01/cpp-practice-ws19-ex01-template/src/3.2 flexible-length sequences/: CMakeLists.txt  benchmark.cpp  sequences.cpp  sequences.hpp
EX01/pdf/: ex01.aux  ex01.fdb_latexmk  ex01.fls  ex01.tex
EX04/: Raytracer.vcxproj
EX04/Debug/: Raytracer.ilk  vc142.idb
EX04/Debug/Raytracer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Raytracer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
EX04/src/Raytracer/Objects/: Sphere.cpp
EX05/raytracing2/: Raytracer.sln  Raytracer.vcxproj  Raytracer.vcxproj.filters  UpgradeLog.htm
EX05/raytracing2/Debug/: Raytracer.ilk  vc142.idb
EX05/raytracing2/Debug/Raytracer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Raytracer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
EX05/raytracing2/src/Raytracer/Scenes/: PointLight.cpp
EX07/source_code/: Rasterizer.vcxproj
EX07/source_code/Debug/: Rasterizer.ilk  vc142.idb
EX07/source_code/Debug/Rasterizer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Rasterizer.lastbuildstate  link.14356.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
EX07/source_code/src/Rasterizer/: SimpleRasterizer.cpp
Exercise01/: CMakeLists.txt  assignment1.cc  assignment2.cc
a2_2_pdf/: a2_2.fdb_latexmk  a2_2.fls  a2_2.tex
exercise_1/: assignment1_1.cpp  assignment1_1.h  assignment1_2.cpp  assignment1_2.h  exercise_1.cpp
